# cosmobot

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  config.example.toml  cosmobot.cabal
.github/workflows/: ci.yml
app/: Main.hs
app/Bot/: Agent.hs  Config.hs  Conversation.hs  Filter.hs  HTTP.hs  Image.hs  Lifecycle.hs  Log.hs  Main.hs  Memory.hs  Message.hs  Prelude.hs  ReplyBody.hs
app/Bot/Agent/: Config.hs  Conversation.hs  Core.hs  Failure.hs  Tool.hs  ToolRegistry.hs  Tools.hs  Types.hs
app/Bot/AgentAudit/: Observation.hs  Storage.hs  (+2 more)
bench/: MessagePipelineBench.hs
cosmobot/: config.example.toml  cosmobot.cabal
cosmobot/app/: Main.hs
cosmobot/bench/: MessagePipelineBench.hs
cosmobot/doc/: RPC.md
cosmobot/test/: AdminSpec.hs  AgentSpec.hs  ChatPlatformSpec.hs  ConcurrencySpec.hs  ConfigSpec.hs  LLMOpenAIConfigSpec.hs  RPCSpec.hs  SafebooruSpec.hs  SchedulerSpec.hs  ScratchpadSpec.hs  ShutUpSpec.hs  StreamSpec.hs  TypingSpec.hs
cosmocode/: CHANGELOG.md  cosmo-code.cabal  cosmocode.cabal
doc/: RPC.md
lib/Bot/: Lifecycle.hs  Memory.hs
migrations/: 2026-05-17-message-id-text.sql  2026-05-23-media-last-used.sql
test/: AdminSpec.hs  AgentSpec.hs  ChatLogSpec.hs  ChatPlatformSpec.hs  FilterSpec.hs  LLMOpenAIConfigSpec.hs  RPCSpec.hs  SafebooruSpec.hs  SchedulerSpec.hs  ScratchpadSpec.hs  ShutUpSpec.hs  StreamSpec.hs
web/: eslint.config.js  index.html  package-lock.json  package.json  rpc.html  tsconfig.json  tsconfig.strict.json  vite.config.ts
web/src/: App.svelte  App.tsx  main.ts  main.tsx
(+242 files in other folders)
