cabal-version:      3.0
name:               cosmocode
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
-- author:
-- maintainer:
-- copyright:
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cosmocode
    import:           warnings
    main-is:          Main.hs
    other-modules:
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   app
    default-language: GHC2024
